# Music-TUI

./: Cargo.toml
src/: app.rs  main.rs  ui.rs
src/api/: songs.rs
src/player/: mod.rs  mpv.rs
src/ui/: content.rs  header.rs  layout.rs  mod.rs  player.rs  sidebar.rs  status.rs
