[package]
name = "music-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
anyhow = "1.0.101"
reqwest = {version = "0.13.2",features = ["json","rustls"]}
tokio = { version = "1.49.0", features = ["full"] }
serde = {version = "1.0.228",features = ["derive"]}
serde_json = "1.0.149"
regex = "1.12.3"
urlencoding = "2.1.3"
html-escape = "0.2.13"
